Add API endpoint to manage tokens
